force-app/main/default/objects/sfdc_user_updatedFailed__e/sfdc_user_updatedFailed__e.object-meta.xml
<CustomObject>
    <description>Platform Event that fires when publishing sfdc_user_updatedSuccess__e fails. Carries the same header identifiers plus error details for downstream error handling.</description>
    <label>sfdc_user_updatedFailed</label>
    <pluralLabel>sfdc_user_updatedFaileds</pluralLabel>
</CustomObject>