force-app/main/default/objects/sfdc_user_updatedFailed__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Human-readable error message returned by EventBus.publish() on failure.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>